--- a/accounting-reporting/reports/Letterhead.jrxml
+++ b/accounting-reporting/reports/Letterhead.jrxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Letterhead" pageWidth="595" pageHeight="841" columnWidth="459" leftMargin="68" rightMargin="68" topMargin="22" bottomMargin="22" uuid="796f7472-1dcf-4486-9df1-f169608d3012">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="226"/>
 	<template><![CDATA["/reports/AccountingStyleSheet.jrtx"]]></template>
 	<parameter name="wrapper" class="de.togginho.accounting.reporting.internal.ModelWrapper" isForPrompting="false"/>
 	<background>
@@ -10,124 +7,32 @@
 	</background>
 	<title>
 		<band height="246" splitType="Stretch">
-			<textField>
-				<reportElement style="INVOICE_TX_12" isPrintRepeatedValues="false" x="281" y="0" width="178" height="16" uuid="3884c932-51f7-4d59-a9af-2d738c547785"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("name")]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10" isPrintRepeatedValues="false" x="281" y="16" width="178" height="83" isRemoveLineWhenBlank="true" uuid="b5b0cea1-03e1-47e1-bdcc-937f70a8bc09"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("description")]]></textFieldExpression>
-			</textField>
+			<frame>
+				<reportElement x="0" y="0" width="459" height="245" isPrintWhenDetailOverflows="true" uuid="3884c932-51f7-4d59-a9af-2d738c547785"/>
+				<subreport>
+					<reportElement x="0" y="0" width="459" height="245" isPrintWhenDetailOverflows="true" uuid="b5b0cea1-03e1-47e1-bdcc-937f70a8bc09"/>
+					<subreportParameter name="company">
+						<subreportParameterExpression><![CDATA[$P{wrapper}]]></subreportParameterExpression>
+					</subreportParameter>
+					<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.JREmptyDataSource()]]></dataSourceExpression>
+					<subreportExpression><![CDATA["/reports/CompanyHeader.jasper"]]></subreportExpression>
+				</subreport>
+			</frame>
 		</band>
 	</title>
-	<pageHeader>
-		<band height="88" splitType="Stretch"/>
-	</pageHeader>
-	<columnHeader>
-		<band height="38" splitType="Stretch"/>
-	</columnHeader>
-	<detail>
-		<band height="30" splitType="Stretch"/>
-		<band height="111"/>
-	</detail>
-	<columnFooter>
-		<band height="7" splitType="Stretch"/>
-	</columnFooter>
 	<pageFooter>
 		<band height="104" splitType="Stretch">
-			<line>
-				<reportElement x="0" y="0" width="459" height="1" uuid="ad975b74-d75f-44c6-8d95-8ec4bf44493d"/>
-			</line>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="2" y="2" width="70" height="13" uuid="73272921-8387-4c4c-a895-88dfc71dbf35"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("bank")]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="2" y="15" width="70" height="13" uuid="791f1ebf-e67d-46ff-83c3-a39d1a533f4c"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("bankAccount")]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="2" y="28" width="70" height="13" uuid="392fb8cd-48fb-486a-8ea2-fd9a3edb05a2"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("bankCode")]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="2" y="41" width="70" height="13" uuid="a0e27b81-a9f5-4c89-ae3f-9e7c360316bb"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("bankBIC")]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="2" y="54" width="70" height="13" uuid="66448d3c-1a5c-4d5f-8139-ccb69be560bf"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("bankIBAN")]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="2" width="175" height="13" uuid="04f9cccb-d22b-44d8-800b-9bba9052dca6"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("bankAccount.bankName")]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="15" width="175" height="13" uuid="b51a4961-06bb-4fcc-9a09-3d4219858b73"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("bankAccount.accountNumber")]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="28" width="175" height="13" uuid="5e126b95-59ac-4966-845e-9f52c5be5b60"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("bankAccount.bankCode")]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="41" width="175" height="13" uuid="83327585-1e25-4737-a343-1b14e6b87cf5"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("bankAccount.bic")]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="54" width="175" height="13" uuid="4a3935d3-f2db-4e54-ae39-0ce025e6fdb4"/>
-				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("bankAccount.iban")]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="2" width="178" height="13" uuid="b113a6cf-79d7-447a-abc9-1eff4c62d799"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("name")]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="15" width="178" height="13" uuid="ee186db2-b74e-456d-94fc-a2125ff647de"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("address.street")]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="28" width="178" height="13" uuid="118e5c57-f95f-4cb4-9a50-2ca48a501516"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.get("address.postalCode") + " " + $P{wrapper}.get("address.city")]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="41" width="178" height="13" isRemoveLineWhenBlank="true" uuid="9dbad37a-df32-4a1c-8bed-2a1fa3a265a6"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.bind("Phone", "address.phoneNumber")]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="54" width="178" height="13" isRemoveLineWhenBlank="true" uuid="8a8269f6-3bfa-4664-91c0-f8e7c9abad5c"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.bind("Mobile", "address.mobileNumber")]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="67" width="178" height="13" isRemoveLineWhenBlank="true" uuid="166144f7-a9ac-4d90-91c4-1c8f15e7b417"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.bind("Email", "address.email")]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="89" width="178" height="13" isRemoveLineWhenBlank="true" uuid="4b80a054-f1fe-47ca-8ad4-b49a82b993f8"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$P{wrapper}.bind("TaxId", "taxNumber")]]></textFieldExpression>
-			</textField>
+			<frame>
+				<reportElement x="0" y="0" width="459" height="104" uuid="ad975b74-d75f-44c6-8d95-8ec4bf44493d"/>
+				<subreport>
+					<reportElement x="0" y="0" width="459" height="104" uuid="73272921-8387-4c4c-a895-88dfc71dbf35"/>
+					<subreportParameter name="company">
+						<subreportParameterExpression><![CDATA[$P{wrapper}]]></subreportParameterExpression>
+					</subreportParameter>
+					<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.JREmptyDataSource()]]></dataSourceExpression>
+					<subreportExpression><![CDATA["/reports/CompanyFooter.jasper"]]></subreportExpression>
+				</subreport>
+			</frame>
 		</band>
 	</pageFooter>
-	<summary>
-		<band height="1" splitType="Stretch"/>
-	</summary>
 </jasperReport>
